fix: correct yoga layout double styling, remove repo icon extrenaous classes d84015bf1264397d9ac6ff18b7c5344f237708ff

--- a/coverage.html
+++ b/coverage.html
@@ -202,6 +202,18 @@
         <tr class="low">
             <td>
                 <!-- miscellaneous -->
+                <a href="./miscellaneous/variables.html#tailwindConfig">src/social-card/templates/tailwind.config.ts</a>
+            </td>
+            <td>variable</td>
+            <td>tailwindConfig</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/1)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
                 <a href="./miscellaneous/variables.html#userLangs">src/social-card/templates/user-langs.ts</a>
             </td>
             <td>variable</td>
