--- a/changelog.html
+++ b/changelog.html
@@ -37,8 +37,13 @@
 <blockquote>
 <p>All notable changes to this project will be documented in this file</p>
 </blockquote>
-<h2 id="120-beta3-2023-04-05"><a href="https://github.com/open-sauced/opengraph.opensauced.pizza/compare/v1.2.0-beta.2...v1.2.0-beta.3">1.2.0-beta.3</a> (2023-04-05)</h2>
+<h2 id="120-beta4-2023-04-08"><a href="https://github.com/open-sauced/opengraph.opensauced.pizza/compare/v1.2.0-beta.3...v1.2.0-beta.4">1.2.0-beta.4</a> (2023-04-08)</h2>
 <h3 id="🍕-features">🍕 Features</h3>
+<ul>
+<li>add custom cdn endpoint configuration for s3 bucket on digital ocean (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/077e473ba9ec01d88d383f202427f06398047652">077e473</a>), closes <a href="https://github.com/open-sauced/opengraph.opensauced.pizza/issues/18">#18</a></li>
+</ul>
+<h2 id="120-beta3-2023-04-05"><a href="https://github.com/open-sauced/opengraph.opensauced.pizza/compare/v1.2.0-beta.2...v1.2.0-beta.3">1.2.0-beta.3</a> (2023-04-05)</h2>
+<h3 id="🍕-features-1">🍕 Features</h3>
 <ul>
 <li>implement digital ocean spaces s3 client storage and cache images 3 days (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/792992e8ad8849a8e1c10178b84e0caa4d023b1b">792992e</a>)</li>
 </ul>
@@ -48,7 +53,7 @@
 <li>correct live release url in github actions deployment (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/4a434e675198be1ee3ec0000a85a02dccf1b080e">4a434e6</a>)</li>
 </ul>
 <h2 id="120-beta1-2023-04-04"><a href="https://github.com/open-sauced/opengraph.opensauced.pizza/compare/v1.1.2...v1.2.0-beta.1">1.2.0-beta.1</a> (2023-04-04)</h2>
-<h3 id="🍕-features-1">🍕 Features</h3>
+<h3 id="🍕-features-2">🍕 Features</h3>
 <ul>
 <li>add boilerplate s3-client sdk code connected to digital ocean spaces (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/a4a71e349579e86be65ce201f2ec941177a1e3de">a4a71e3</a>)</li>
 </ul>
@@ -71,7 +76,7 @@
 <ul>
 <li>remove extraneous colors package (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/4c7d29aa9ad9a7fe79c30fb79ed3e57b971fa9a5">4c7d29a</a>)</li>
 </ul>
-<h3 id="🍕-features-2">🍕 Features</h3>
+<h3 id="🍕-features-3">🍕 Features</h3>
 <ul>
 <li>add correct languages calculation and display (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/977df7589d67e6987cd9cb4e6528a86f46470541">977df75</a>)</li>
 </ul>
@@ -115,7 +120,7 @@
 <li>move to nextjs backend architecture static component functions and boilerplate (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/d4f854d4d5cee998e6495753a44dc006547a32bd">d4f854d</a>)</li>
 <li>rewrite code and correct buffers (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/c12099a219b529250ba6fb8527911c4972d344d4">c12099a</a>)</li>
 </ul>
-<h3 id="🍕-features-3">🍕 Features</h3>
+<h3 id="🍕-features-4">🍕 Features</h3>
 <ul>
 <li>add development tooling and backend configuration (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/f1f5947c4b97829f8e17e56bd4c8c4aab5bd4c63">f1f5947</a>)</li>
 <li>add dynamic image (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/5797c5447edbe4dd1923fecf3af72c169cc7b781">5797c54</a>)</li>
