--- a/index.html
+++ b/index.html
@@ -49,30 +49,49 @@
 </div>
 
 <h2 id="🚀-live-release-environments">🚀 Live release environments</h2>
+<h3 id="production-main">Production (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/tree/main">main</a>)</h3>
 <ul>
-<li><a href="https://cloud.digitalocean.com/apps/41eb42f8-3ca9-4598-b9c7-4378868a5702">Digital Ocean</a></li>
-<li><a href="https://opengraph.opensauced.pizza">Open Sauced</a></li>
+<li><a href="https://cloud.digitalocean.com/apps/41eb42f8-3ca9-4598-b9c7-4378868a5702">opengraph@digital-ocean.app</a></li>
+<li><a href="https://opengraph.opensauced.pizza">opengraph.opensauced</a></li>
+</ul>
+<h3 id="beta-beta">Beta (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/tree/beta">beta</a>)</h3>
+<ul>
+<li><a href="https://cloud.digitalocean.com/apps/7fd2cd42-4df7-4204-af8b-0e7ec252c324/overview">opengraph-beta@digital-ocean.app</a></li>
+<li><a href="https://beta.opengraph.opensauced.pizza">beta.opengraph.opensauced</a></li>
 </ul>
 <h2 id="📖-prerequisites">📖 Prerequisites</h2>
 <p>In order to run the project we need the following software binaries installed on our development machines:</p>
 <ul>
-<li><code>node&gt;=18.15.0</code></li>
-<li><code>npm&gt;=9.6.3</code></li>
-<li><code>docker&gt;=20.10.23</code></li>
+<li><input checked="" disabled="" type="checkbox"> <code>node&gt;=18.15.0</code></li>
+<li><input checked="" disabled="" type="checkbox"> <code>npm&gt;=9.6.3</code></li>
+<li><input disabled="" type="checkbox"> <code>docker&gt;=20.10.23</code></li>
 </ul>
 <h2 id="🖥️-local-development">🖥️ Local development</h2>
 <p>To install the application:</p>
 <div><pre class="line-numbers"><code class="language-shell">npm ci</code></pre></div><p>To start a local copy of the app on port <code>3001</code>:</p>
 <div><pre class="line-numbers"><code class="language-shell">npm run start:dev</code></pre></div><h3 id="📝-environment-variables">📝 Environment variables</h3>
 <p>Some environment variables are required to run the application. You can find them in the <code>.env.example</code> file. While most of them are optional, some are required to run the application.</p>
+<p>One can reverse engineer the <a href="./src/config">named configs</a> but some need a little explanation.</p>
 <p>Boilerplate, changed mostly locally:</p>
-<div><pre class="line-numbers"><code class="language-dotenv"># Global env
-API_HOST=0.0.0.0
-API_PORT=3003
-SERVICE_DOMAIN=opensauced.pizza
+<div><pre class="line-numbers"><code class="language-dotenv"># GitHub private access tokens
+GITHUB_PAT_USER=ghp_************************************
 
-# GitHub private access tokens
-GITHUB_PAT_USER=ghp_************************************</code></pre></div><h3 id="🎨-code-linting">🎨 Code linting</h3>
+# DigitalOcean Spaces through aws-sdk configuration
+DO_SPACES_ACCESS_KEY_ID=********************
+DO_SPACES_SECRET_ACCESS_KEY=*******************************************</code></pre></div><p>Ping @open-sauced/maintainers to get the dev CDN keys for the <code>DO_SPACES_*</code> variables.</p>
+<p>Other Digital Ocean S3 variables are sensibly set to default for local development, here are the defauls:</p>
+<div><pre class="line-numbers"><code class="language-dotenv">DO_SPACES_ENDPOINT=digitaloceanspaces.com
+DO_SPACES_REGION=sfo3
+DO_SPACES_BUCKET_NAME=opengraph-dev</code></pre></div><p>It is also advised to set the following variables to <code>true</code> to avoid using the cached CDN during development:</p>
+<div><pre class="line-numbers"><code class="language-dotenv">DO_SPACES_CDN_DISABLED=true</code></pre></div><p>If using a custom domain, you can set the following variable to the domain name:</p>
+<div><pre class="line-numbers"><code class="language-dotenv">DO_SPACES_SUBDOMAIN=beta.opengraph-cdn.opensauced.pizza</code></pre></div><p>Other API defaults you can change are not required in local development, but can sometimes appear configured differently for production:</p>
+<div><pre class="line-numbers"><code class="language-dotenv">API_HOST=0.0.0.0
+API_PORT=3005
+API_DOMAIN=opengraph.opensauced.pizza
+MEMORY_HEAP=200
+MEMORY_RSS=3000
+DISK_PERCENTAGE=0.7
+DISK_SIZE=100</code></pre></div><h3 id="🎨-code-linting">🎨 Code linting</h3>
 <p>To check the code and styles quality, use the following command:</p>
 <div><pre class="line-numbers"><code class="language-shell">npm run lint</code></pre></div><p>This will also display during development, but not break on errors.</p>
 <p>To fix the linting errors, use the following command:</p>
